--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 .distill-site-nav {
   color: rgba(255, 255, 255, 0.8);
-  background-color: #268FD7;
+  background-color: #660066;
   font-size: 15px;
   font-weight: 300;
 }
 
 .distill-site-nav a {
-  color: black;
+  color: white;
   text-decoration: none;
 }
 
 .distill-site-nav a:hover {
-  color: black;
+  color: pink;
 }
 
 .distill-site-header {
