--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 .distill-site-nav a {
   color: white;
   text-decoration: none;
+  font-family: Century;
 }
 
 .distill-site-nav a:hover {
@@ -24,4 +25,10 @@
   .distill-site-nav {
     display: none;
   }
+}
+
+/*title*/
+h1 {font-family: Monotype Corsiva; 
+    font-size: 30pt; 
+    line-height: 1em;
 }
