--- a/docs/style.css
+++ b/docs/style.css
@@ -31,4 +31,10 @@
 h1 {font-family: Monotype Corsiva; 
     font-size: 30pt; 
     line-height: 1em;
+    
+}
+
+/*categories*/
+body{
+  color: #660066;
 }
