--- a/docs/style.css
+++ b/docs/style.css
@@ -32,3 +32,7 @@ h1 {font-family: Monotype Corsiva;
     font-size: 50pt; 
     line-height: 1em;
 }
+
+.posts-list p{
+    font-style: italic;
+  }
